Fixes #2318: Truncated table issue in casebook. Submitted by Vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2782 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/css/app.css
+++ b/web/src/main/webapp/includes/css/app.css
@@ -61,12 +61,17 @@ a:active {
   color: red;
 }
 
+.repeating-group-table {
+  table-layout:fixed !important;
+  width: 100%  !important;
+}
 
-
+.repeating_item_group_element {
+  vertical-align:top;
+}
 
 #page-header {
-  table-layout:fixed;
-  width: 100%;
+  table-layout:fixed;  width: 100%;
   padding:20px;
   margin-bottom: 1px;
   font-size: 14px;
